add analyse approfondies

--- a/notebooks/kmeans_student_mental_health.ipynb
+++ b/notebooks/kmeans_student_mental_health.ipynb
@@ -2824,6 +2824,23 @@
   },
   {
    "cell_type": "markdown",
+   "id": "03a5ea2f",
+   "metadata": {},
+   "source": [
+    "## Analyse approfondie des clusters\n",
+    "\n",
+    "- **C2 & C3 – stress académiques avancés vs primo-entrants** : deux segments présentent 100 % de dépression mais pour des dynamiques différentes. C2 regroupe surtout les années 3/4 (Engineering, Law, etc.) avec un CGPA ~3.46, signe d’une pression de validation finale (projets, stage, insertion). C3 combine les Year 1 BIT/Engineering avec 100 % dépression + anxiété – reflet du choc d’entrée dans des filières STEM exigeantes. Actions proposées : cellule « transition » pour les Year 1 et dispositif « fin de cycle » (coaching carrière, gestion stress soutenance) pour les Year 3+.\n",
+    "- **C7 – panic attack généralisé** : Engineering/BCS années 1–3, CGPA ~3.48. Les crises de panique surviennent malgré la réussite académique, probablement à cause de la charge horaire et des projets compétitifs. Recommandation : ateliers respiration/gestion de crise intégrés aux cours et coordination avec les responsables pour lisser les échéances.\n",
+    "- **C4 – santé mentale clinique déjà suivie** : 100 % ont consulté un spécialiste, mix Year 1–3, CGPA ~3.42. Il faut assurer la continuité soins-études (flexibilité des délais, orchestration des modules théoriques) afin d’éviter les rechutes.\n",
+    "- **C6 – anxiété de performance** : anxiété 100 %, dépression 0 %, CGPA ~3.56 (Year 1/2 BCS/BIT/KOE). Les étudiants cherchent à maintenir un classement élevé : mentorat par pairs, ateliers « growth mindset » et hygiène de travail sont recommandés.\n",
+    "- **C5 – échec académique isolé** : CGPA ~1.0, effectif 4 (Year 1/3). Symptômes mentaux faibles mais risque d’abandon élevé. Actions : coaching individuel, aide sociale, réorientation accompagnée.\n",
+    "- **C0 & C1 – segments ressources** : profils stables (18–23 ans, CGPA >3.4). Ils peuvent devenir ambassadeurs bien-être/tuteurs pour C3/C5.\n",
+    "- **Effet programme/année** : Engineering, BCS, BIT sont surreprésentés dans les clusters critiques (C2, C3, C4, C6, C7), ce qui confirme que ces filières concentrent les contraintes. L’année d’étude module la symptomatologie (adaptation en Year 1, pression finale en Year 3, préparation insertion en Year 4). D’où l’importance d’une stratégie multi-niveaux.\n",
+    "- **Lien CGPA/santé mentale** : C5 montre qu’un faible CGPA peut se produire sans détresse déclarée, tandis que C2/C4 rappellent qu’un bon CGPA ne protège pas contre les troubles. Il ne faut donc pas conditionner l’accès au soutien à la performance académique.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "a30a59fa",
    "metadata": {},
    "source": [
